# Pulse

./: .env.example  .gitignore  AGENTS.md  DESIGN_DOC.md  LICENSE  Makefile  README.md  TECHNICAL_DOC.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  deps.py  main.py  scheduler.py
backend/app/ai/: __init__.py  llm.py  schemas.py
backend/app/ai/agents/: __init__.py  checkin_agent.py  classifier_agent.py
backend/app/ai/graphs/: __init__.py  checkin_graph.py  classifier_graph.py
backend/app/ai/prompts/: checkin_system.py  classifier_system.py
backend/app/ai/tools/: __init__.py  meddra_lookup.py
backend/app/events/: __init__.py  bus.py
backend/app/models/: __init__.py  alert.py  checkin.py  patient.py  staff.py  symptom.py  trial.py  wearable.py
backend/app/modules/alert/: deduplication.py  risk_scoring.py  router.py  rules.py  service.py
backend/app/modules/analytics/: router.py  service.py
backend/app/modules/auth/: jwt.py  router.py  service.py
backend/app/modules/checkin/: router.py  service.py
backend/app/schemas/: __init__.py  alert.py  auth.py  checkin.py  dashboard.py  patient.py  symptom.py  voice.py  wearable.py
backend/app/ws/: __init__.py  manager.py
backend/scripts/: generate_wearable_data.py  run_demo_scenario.py  run_voice_worker.py  seed_demo_data.py
backend/tests/: conftest.py
backend/tests/integration/: test_dashboard_api.py  test_wearable_api.py
backend/tests/unit/: test_ai_checkin.py  test_anomaly_detection.py  test_risk_scoring.py
(+58 files in other folders)
